--- a/css/cadastrooficial.css
+++ b/css/cadastrooficial.css
@@ -7,6 +7,7 @@
 
 body{
   margin:10px;
+  background-color: #bf1f3c;
 }
 
 a{
@@ -22,8 +23,7 @@ a.links{
 .content{
   width: 500px;
   margin: 0px auto;
-  position: relative;
-  
+  position: relative; 
 }
 
 /* formatando o cabeçalho dos formulários */
@@ -106,7 +106,7 @@ input[type="submit"]{
   transition: all 0.2s linear;
 }
 input[type="submit"]:hover{
-  background: #365959;
+  background: #076b6b;
 }
 
 /*marcando os links para mudar de um formulário para outro */
@@ -129,9 +129,9 @@ input[type="submit"]:hover{
   font-weight: bold;
   background: #f7f8f1;
   padding: 6px;
-  color: rgb(29, 162, 193);
+  color: #365959;
   margin-left: 10px;
-  border: 1px solid #cbd518;
+  border: 1px solid #365959;
 
   -webkit-border-radius: 4px;
   border-radius: 4px;  
