--- a/cssC/style.css
+++ b/cssC/style.css
@@ -1,23 +1,32 @@
 body{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:monospace;
+    background-color: #247ba0;
+}
+
+header{
+    background-color: #13293d;
+    color: #1b98e0;
+    border: 4px solid #1b98e0;
+    padding: 17.5px;
+    margin: auto;
 }
  
 .container{
-    background-color: #365959;
+    background-color:  #006494;
     margin: auto;
     text-align: center;
     width: 50%;
-    border: 2px solid #fff;
+    border: 2px solid #1b98e0;
     border-radius: 8px;
     margin-top: 50px;
 }
  
-.row-title{
-    color: #Fff;
+/* .row-title{
+    color: #1b98e0;
     font-weight: bold;
     padding: 4px;
     margin-right: 4px;
-}
+} */
  
 /* NOME*/
  
@@ -33,10 +42,11 @@ body{
 .input-nome{
     width: 50%;
     padding: 6px;
-    border: 1px solid #000;
+    border: 3px solid #1b98e0;
     border-radius: 5px;
     margin-top: 4px;
     font-size: 15px;
+    outline: none
 }
  
  
@@ -57,10 +67,11 @@ body{
 .input-email{
     width: 50%;
     padding: 6px;
-    border: 1px solid #000;
+    border: 3px solid #1b98e0;
     border-radius: 5px;
     margin-top: 4px;
     font-size: 15px;
+    outline: none
 }
  
  /* MENSAGEM */
@@ -79,10 +90,11 @@ body{
     width: 80%;
     height: 20%;
     padding: 4px;
-    border: 1px solid #000;
-    border-radius: 8px;
+    border: 3px solid #1b98e0;
+    border-radius: 5px;
     margin-top: 4px;
     font-size: 15px;
+    outline: none
 }
  
  
@@ -98,18 +110,31 @@ body{
 }
  
 .button-class{
-    width: 20%;
-    height: 30px;
+    color: white;
+    background-color: #13293d;
+    width: 30%;
+    padding: 6px;
+    align-items: center;
+    border-radius: 4px;
+    border: 3px solid  #1b98e0;
+    outline: none;
     font-size: 20px;
-    border: 1px solid #000;
-    border-radius: 10px;
-    background-color: #fff;
-    cursor: pointer;
-    color: #000;
-    ;
+    font-family:'Courier New', Courier, monospace;
     
 }
  
 .button-class:hover{
-    background-color: #f24535;
+    background-color: #1b98e0;
+}
+
+footer{
+    background-color:#13293d;
+    padding: 16px; 
+    border: 4px solid #1b98e0;
+}
+
+#hh{
+    font-size: 20px;
+    font-family:monospace;
+    color: #1b98e0; 
 }
