--- a/css/cadastrooficial.css
+++ b/css/cadastrooficial.css
@@ -156,7 +156,7 @@ input[type="submit"]:hover{
   background: rgb(247, 247, 247);
   border: 1px solid rgba(147, 184, 189,0.8);
   
-  -webkit-box-shadow: 5px;
+  -webkit-box-align: 5px;
   border-radius: 5px;
   
   -webkit-animation-duration: 0.5s;
