--- a/cssC/loginCadastro.css
+++ b/cssC/loginCadastro.css
@@ -62,7 +62,7 @@ header{
    outline: none; 
    width:40%;
 }
-#confirme{
+#cadastrar{
    display:block;
    padding: 8px;
    border: 3px solid #1b98e0;
